[gd_scene load_steps=14 format=2]

[ext_resource path="res://Core/StartScreen/MainMenuUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/FashionVictim.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Music/ERASE - Menu.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Images/MechTitle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/BackArrow.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/MenuOptionsFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Themes/MenuButtonTheme.tres" type="Theme" id=8]
[ext_resource path="res://Core/StartScreen/MenuMusicSFXHandler.gd" type="Script" id=10]
[ext_resource path="res://Assets/SFX/UI/clang.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/UI/click.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_StartButton_pressed():
	pass # Replace with function body.
"

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = 250.0
margin_right = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="AspectRatioContainer" parent="MainVBoxContainer"]
margin_right = 200.0

[node name="Sprite" type="Sprite" parent="MainVBoxContainer/TitleContainer"]
position = Vector2( 91.5, -70 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="StartButton" type="Button" parent="MainVBoxContainer"]
margin_top = 4.0
margin_right = 200.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
action_mode = 0
text = "Begin"
script = SubResource( 3 )

[node name="ContinueButton" type="Button" parent="MainVBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 183.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
action_mode = 0
text = "Continue"
script = SubResource( 3 )

[node name="PrevLevelsButton" type="Button" parent="MainVBoxContainer"]
visible = false
margin_top = 44.0
margin_right = 183.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( -1047.95, -88 )
theme = ExtResource( 8 )
action_mode = 0
text = "Replay Levels"
script = SubResource( 3 )

[node name="OptionsButton" type="Button" parent="MainVBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -1047.95, -88 )
theme = ExtResource( 8 )
action_mode = 0
text = "Options"
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="How2PlayButton" type="Button" parent="MainVBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( -1047.95, -88 )
theme = ExtResource( 8 )
action_mode = 0
text = "How 2 Play"
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainVBoxContainer"]
margin_top = 160.0
margin_right = 200.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
action_mode = 0
text = "Abort"
script = SubResource( 3 )

[node name="LevelsVBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_right = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Button" type="Button" parent="LevelsVBoxContainer"]
margin_top = 284.0
margin_right = 300.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
disabled = true
action_mode = 0
text = "Level 1"
script = SubResource( 3 )

[node name="Level2Button" type="Button" parent="LevelsVBoxContainer"]
margin_top = 336.0
margin_right = 300.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
disabled = true
action_mode = 0
text = "Level 2"
script = SubResource( 3 )

[node name="LevelBackButton" type="Button" parent="LevelsVBoxContainer"]
margin_top = 388.0
margin_right = 300.0
margin_bottom = 436.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
action_mode = 0
text = "Back"
icon = ExtResource( 5 )
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -220.0
margin_right = 220.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResolutionLabel" type="Label" parent="OptionsVBoxContainer"]
margin_top = 131.0
margin_right = 440.0
margin_bottom = 179.0
theme = ExtResource( 8 )
text = "Resolution Scale (100%)"
align = 1

[node name="ResolutionHSlider" type="HSlider" parent="OptionsVBoxContainer"]
margin_top = 183.0
margin_right = 440.0
margin_bottom = 213.0
theme = ExtResource( 8 )
min_value = 50.0
max_value = 110.0
step = 10.0
value = 100.0

[node name="GraphicsLabel" type="Label" parent="OptionsVBoxContainer"]
margin_top = 217.0
margin_right = 440.0
margin_bottom = 265.0
theme = ExtResource( 8 )
text = "Graphics Quality"
align = 1

[node name="GraphicsOptionButton" type="OptionButton" parent="OptionsVBoxContainer"]
margin_top = 269.0
margin_right = 440.0
margin_bottom = 317.0
theme = ExtResource( 8 )
text = "-- Select an Option --"
align = 1

[node name="AntiAliasingLabel" type="Label" parent="OptionsVBoxContainer"]
margin_top = 321.0
margin_right = 440.0
margin_bottom = 369.0
theme = ExtResource( 8 )
text = "Anti-Aliasing"
align = 1

[node name="AAOptionButton" type="OptionButton" parent="OptionsVBoxContainer"]
margin_top = 373.0
margin_right = 440.0
margin_bottom = 421.0
theme = ExtResource( 8 )
text = "-- Select an Option --"
align = 1

[node name="FullscreenButton" type="CheckButton" parent="OptionsVBoxContainer"]
margin_top = 425.0
margin_right = 440.0
margin_bottom = 479.0
theme = ExtResource( 8 )
text = "Fullscreen"

[node name="VsyncButton" type="CheckButton" parent="OptionsVBoxContainer"]
margin_top = 483.0
margin_right = 440.0
margin_bottom = 537.0
theme = ExtResource( 8 )
disabled = true
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBackButton" type="Button" parent="OptionsVBoxContainer"]
margin_top = 541.0
margin_right = 440.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( -1057.25, 20 )
theme = ExtResource( 8 )
action_mode = 0
text = "Back"
icon = ExtResource( 5 )
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusicSFXHandler" type="Node" parent="."]
script = ExtResource( 10 )

[node name="MenuBGMusicPlayer" type="AudioStreamPlayer" parent="MenuMusicSFXHandler"]
stream = ExtResource( 3 )
autoplay = true

[node name="FocusSFX" type="AudioStreamPlayer" parent="MenuMusicSFXHandler"]
stream = ExtResource( 13 )

[node name="SelectSFX" type="AudioStreamPlayer" parent="MenuMusicSFXHandler"]
stream = ExtResource( 12 )

[connection signal="focus_entered" from="MainVBoxContainer/StartButton" to="MenuMusicSFXHandler" method="_on_StartButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/StartButton" to="MainVBoxContainer/StartButton" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/StartButton" to="MenuMusicSFXHandler" method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="MainVBoxContainer/ContinueButton" to="MenuMusicSFXHandler" method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/ContinueButton" to="MenuMusicSFXHandler" method="_on_ContinueButton_pressed"]
[connection signal="focus_entered" from="MainVBoxContainer/PrevLevelsButton" to="MenuMusicSFXHandler" method="_on_PrevLevelsButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/PrevLevelsButton" to="." method="_on_PrevLevelsButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/PrevLevelsButton" to="MenuMusicSFXHandler" method="_on_PrevLevelsButton_pressed"]
[connection signal="focus_entered" from="MainVBoxContainer/OptionsButton" to="MenuMusicSFXHandler" method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/OptionsButton" to="MenuMusicSFXHandler" method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="MainVBoxContainer/How2PlayButton" to="MenuMusicSFXHandler" method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/How2PlayButton" to="." method="_on_How2PlayButton_pressed"]
[connection signal="pressed" from="MainVBoxContainer/How2PlayButton" to="MenuMusicSFXHandler" method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="MainVBoxContainer/QuitButton" to="MenuMusicSFXHandler" method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="MainVBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="focus_entered" from="LevelsVBoxContainer/Level1Button" to="MenuMusicSFXHandler" method="_on_Level1Button_focus_entered"]
[connection signal="pressed" from="LevelsVBoxContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="focus_entered" from="LevelsVBoxContainer/Level2Button" to="MenuMusicSFXHandler" method="_on_Level2Button_focus_entered"]
[connection signal="pressed" from="LevelsVBoxContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="focus_entered" from="LevelsVBoxContainer/LevelBackButton" to="MenuMusicSFXHandler" method="_on_LevelBackButton_focus_entered"]
[connection signal="pressed" from="LevelsVBoxContainer/LevelBackButton" to="." method="_on_LevelBackButton_pressed"]
[connection signal="pressed" from="LevelsVBoxContainer/LevelBackButton" to="MenuMusicSFXHandler" method="_on_LevelBackButton_pressed"]
[connection signal="focus_entered" from="OptionsVBoxContainer/ResolutionHSlider" to="MenuMusicSFXHandler" method="_on_ResolutionHSlider_focus_entered"]
[connection signal="value_changed" from="OptionsVBoxContainer/ResolutionHSlider" to="." method="_on_ResolutionHSlider_value_changed"]
[connection signal="value_changed" from="OptionsVBoxContainer/ResolutionHSlider" to="MenuMusicSFXHandler" method="_on_ResolutionHSlider_value_changed"]
[connection signal="focus_entered" from="OptionsVBoxContainer/GraphicsOptionButton" to="MenuMusicSFXHandler" method="_on_GraphicsOptionButton_focus_entered"]
[connection signal="item_selected" from="OptionsVBoxContainer/GraphicsOptionButton" to="." method="_on_GraphicsOptionButton_item_selected"]
[connection signal="item_selected" from="OptionsVBoxContainer/GraphicsOptionButton" to="MenuMusicSFXHandler" method="_on_GraphicsOptionButton_item_selected"]
[connection signal="focus_entered" from="OptionsVBoxContainer/AAOptionButton" to="MenuMusicSFXHandler" method="_on_AAOptionButton_focus_entered"]
[connection signal="item_selected" from="OptionsVBoxContainer/AAOptionButton" to="." method="_on_AAOptionButton_item_selected"]
[connection signal="item_selected" from="OptionsVBoxContainer/AAOptionButton" to="MenuMusicSFXHandler" method="_on_AAOptionButton_item_selected"]
[connection signal="focus_entered" from="OptionsVBoxContainer/FullscreenButton" to="MenuMusicSFXHandler" method="_on_FullscreenButton_focus_entered"]
[connection signal="pressed" from="OptionsVBoxContainer/FullscreenButton" to="MenuMusicSFXHandler" method="_on_FullscreenButton_pressed"]
[connection signal="toggled" from="OptionsVBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="focus_entered" from="OptionsVBoxContainer/VsyncButton" to="MenuMusicSFXHandler" method="_on_VsyncButton_focus_entered"]
[connection signal="pressed" from="OptionsVBoxContainer/VsyncButton" to="MenuMusicSFXHandler" method="_on_VsyncButton_pressed"]
[connection signal="toggled" from="OptionsVBoxContainer/VsyncButton" to="." method="_on_VsyncButton_toggled"]
[connection signal="focus_entered" from="OptionsVBoxContainer/OptionsBackButton" to="MenuMusicSFXHandler" method="_on_OptionsBackButton_focus_entered"]
[connection signal="pressed" from="OptionsVBoxContainer/OptionsBackButton" to="." method="_on_OptionsBackButton_pressed"]
[connection signal="pressed" from="OptionsVBoxContainer/OptionsBackButton" to="MenuMusicSFXHandler" method="_on_OptionsBackButton_pressed"]
